# kairos

./: .gitignore
examples/: demo_notebook.ipynb
kairos_plugin/: README.md  pyproject.toml  requirements.txt  setup.py
kairos_plugin/kairos/: __init__.py  auto_tracker.py  cli.py  config.py  cost_calculator.py  display.py  gpu_monitor.py  py.typed  storage.py  tracker.py
tests/: __init__.py  test_auto_tracker.py  test_storage.py  test_tracker.py
